--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -190,7 +190,7 @@ body
 					flex-direction: column;
 					align-items: center;
 					margin-left: 20px;
-					a
+					span
 					{
 						cursor: pointer;
 						&:hover
